# counting-reward-automata

./: .gitignore  README.md  pyproject.toml
cra/: train.py
cra/agents/counter_machine/: __init__.py
cra/agents/counter_machine/context_free/: config.py
cra/agents/counter_machine/context_sensitive/: config.py
cra/agents/counter_machine/regular/: config.py
cra/agents/q_learning/: __init__.py
cra/agents/reward_machine/: __init__.py
cra/agents/reward_machine/context_free/: config.py
cra/agents/reward_machine/context_sensitive/: config.py
cra/agents/reward_machine/regular/: config.py
cra/environments/: context_free.py  context_sensitive.py  regular.py
cra/results/: convergence_results_CF-0.pkl
cra/utils/: __init__.py  plot.py
